@@ -1,7 +1,6 @@
 package com._ithon.speeksee.domain.script.controller;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.web.bind.annotation.DeleteMapping;
@@ -10,17 +9,20 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
+import com._ithon.speeksee.domain.member.entity.Member;
 import com._ithon.speeksee.domain.script.domain.Script;
+import com._ithon.speeksee.domain.script.domain.ScriptSortOption;
 import com._ithon.speeksee.domain.script.dto.response.ScriptResponse;
 import com._ithon.speeksee.domain.script.dto.resquest.ScriptGenerateRequest;
 import com._ithon.speeksee.domain.script.service.ScriptService;
-import com._ithon.speeksee.domain.member.entity.Member;
 import com._ithon.speeksee.global.auth.model.CustomUserDetails;
 import com._ithon.speeksee.global.infra.exception.response.ApiRes;
 
 import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
@@ -71,18 +73,34 @@ public class ScriptController {
 		return ApiRes.success(ScriptResponse.from(script));
 	}
 
-	@Operation(
-		summary = "내 대본 전체 조회",
-		description = "로그인한 사용자의 대본 목록을 조회합니다."
-	)
 	@GetMapping("/my")
-	public ApiRes<List<ScriptResponse>> getMyScripts(@AuthenticationPrincipal CustomUserDetails userDetails) {
-		List<Script> scripts = scriptService.getScriptsByMemberId(userDetails.getMember().getId());
+	public ApiRes<List<ScriptResponse>> getMyScripts(
+		@AuthenticationPrincipal CustomUserDetails userDetails,
+
+		@Parameter(
+			description = """
+        정렬 기준 (기본값: CREATED_DESC)
+        - CREATED_DESC: 생성일 최신순
+        - CREATED_ASC: 생성일 오래된 순
+        - COUNT_DESC: 연습 횟수 많은 순
+        - COUNT_ASC: 연습 횟수 적은 순
+        - TITLE_ASC: 제목 가나다순
+        - TITLE_DESC: 제목 역순
+        - DIFFICULTY_ASC: 난이도 쉬운 순
+        - DIFFICULTY_DESC: 난이도 어려운 순
+        - UPDATED_ASC: 마지막 연습 오래된 순
+        - UPDATED_DESC: 마지막 연습 최신순
+        """
+		)
+		@RequestParam(defaultValue = "CREATED_DESC") ScriptSortOption sort
+	) {
+		List<Script> scripts = scriptService.getScriptsByMemberId(userDetails.getMember().getId(), sort);
 		List<ScriptResponse> response = scripts.stream()
 			.map(ScriptResponse::from)
-			.collect(Collectors.toList());
+			.toList();
 		return ApiRes.success(response);
 	}
+
 
 	@Operation(
 		summary = "내 대본 단건 조회",
